<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_InputSourceCtrl" Id="2a6e906b-8ab2-4237-a599-8cf3cbcc36d1">
    <Declaration><![CDATA[TYPE ST_HMI_InputSourceCtrl : 
STRUCT
	nActiveRecordIdx: INT;
	
	dtSelectedRangeStart: DCTIMESTRUCT;
	dtSelectedRangeEnd: DCTIMESTRUCT;
	
	bStart: BOOL;
	bCancel: BOOL;
	bPause: BOOL;
	bReset: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>